unpackaged/main/default/objects/Special_Buy_Line_Item__c/Special_Buy_Line_Item__c.object-meta.xml
<CustomObject>
    <description>This Object is a representation of an external pricing table, where a product has been purchased for a non-standard Cost Price.</description>
    <label>Special Buy Line Item</label>
    <nameField>
        <label>Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Special Buy Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>