unpackaged/main/default/objects/Special_Buy_Line_Item__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <description>Cost excluding GST</description>
    <label>Special Buy Cost (Ex-GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>