unpackaged/main/default/objects/Special_Buy_Line_Item__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <description>States associated to the special buy.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>