unpackaged/main/default/objects/Special_Buy_Line_Item__c/fields/Special_Buy__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy__c</fullName>
    <description>A lookup to the related Special Buy.</description>
    <label>Special Buy</label>
    <referenceTo>Special_Buy__c</referenceTo>
    <relationshipLabel>Special Buy Line Items</relationshipLabel>
    <relationshipName>Special_Buy_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>