unpackaged/main/default/objects/Special_Buy_Line_Item__c/fields/Special_Buy_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Special_Buy_Line_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>External ID of the special buy line item</description>
    <externalId>true</externalId>
    <label>Special Buy Line ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>