unpackaged/main/default/objects/Special_Buy_Line_Item__c/fields/Supplier_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Item_Number__c</fullName>
    <description>Supplier item number</description>
    <label>Supplier Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>